[package]
name = "sqlxx-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
env_logger = "0.10.0"
serde = "1.0.152"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls"] }
sqlxx-macros = { path = "../sqlxx-macros" }
tokio =  { version = "1.25.0", features = ["full"] }
