[package]
name = "sqlxx-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"] }

[lib]
proc-macro = true
